# readafterme

./: .gitignore  AGENTS.md  main.py  pyproject.toml  run.py  run_https.sh
.github/workflows/: build-apk.yml  ci.yml
app/: main.py  schemas.py
app/api/: routes.py
core/: align.py  asr.py  audio.py  phonemes.py  scoring.py  translate.py
flutter_app/: pubspec.yaml  setup.sh
flutter_app/lib/: main.dart  theme.dart
flutter_app/lib/models/: history_item.dart  score_result.dart  sentence.dart  video_info.dart
flutter_app/lib/providers/: app_provider.dart
flutter_app/lib/screens/: history_screen.dart  import_screen.dart  practice_screen.dart
flutter_app/lib/services/: api_service.dart  audio_recorder_service.dart
flutter_app/lib/widgets/: score_ring.dart  sentence_list.dart  video_player_widget.dart
frontend/: capacitor.config.ts  index.html  package-lock.json  package.json  vite.config.ts
frontend/android/app/: build.gradle
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/com/readafterme/app/: MainActivity.java
frontend/android/app/src/main/res/values/: strings.xml
frontend/src/: App.tsx  index.css
kivy_app/: buildozer.spec  main.py  theme.py
kivy_app/screens/: history_screen.py  import_screen.py  practice_screen.py
kivy_app/services/: api_service.py  audio_recorder.py
kivy_app/widgets/: score_ring.py
